# dockop

./: .gitignore  README.md  dockop.yml  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
code/: AmpC_all_generate_FPs.ipynb  AmpC_all_generate_vectors.ipynb  AmpC_all_iterative.ipynb  AmpC_all_iterative2.ipynb  AmpC_all_iterative_old.ipynb  D4_all_generate_FPs.ipynb  Enamine_HTS_all_generate_FPs.ipynb  Enamine_HTS_all_generate_embeddings.ipynb  Enamine_HTS_all_generate_vectors.ipynb  Enamine_HTS_all_iterative.ipynb  Enamine_HTS_all_iterative_modal.ipynb  Enamine_HTS_all_iterative_regressor.ipynb  Enamine_HTS_all_iterative_regressor_bayesian_opt.ipynb  FEN1_all_generate_FPs.ipynb  FEN1_all_iterative.ipynb
code/.ipynb_checkpoints/: AmpC_all_generate_vectors-checkpoint.ipynb  AmpC_all_iterative-checkpoint.ipynb  AmpC_all_iterative2-checkpoint.ipynb  AmpC_all_iterative_regressor-checkpoint.ipynb  Enamine_HTS_all_generate_vectors-checkpoint.ipynb  Enamine_HTS_all_iterative-checkpoint.ipynb  Enamine_HTS_all_iterative_modal-checkpoint.ipynb  Enamine_HTS_all_iterative_regressor-checkpoint.ipynb
processed_data/: EnamineHTS_embedding_results.csv  EnamineHTS_results.csv  FEN1_results.csv
