[tool.poetry]
name = "dockop"
version = "0.1.0"
description = ""
authors = ["Rico Meinl <rmeinl97@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.3"
scipy = "^1.6.3"
pandas = "^1.2.3"
pymc3 = "^3.11.2"
altair = "^4.1.0"
h5py = "^3.2.1"
matplotlib = "^3.4.2"
scikit-learn = "^0.24.2"
tqdm = "^4.61.0"
Cython = "^0.29.23"
n2 = "^0.1.7"
bitstring = "^3.1.7"
scikit-network = "^0.23.1"
psutil = "^5.8.0"
ray = {extras = ["default"], version = "^1.3.0"}
ipykernel = "^5.5.5"
altair-viewer = "^0.3.0"
vega = "^3.4.0"
python-Levenshtein = "^0.12.2"
cachetools = "^4.2.2"
modAL = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

